Fix: Atoms/Modal replacing overflow: scroll by overflow: auto (to avoid windows to show its scroll bar)

--- a/src/assets/_modal.scss
+++ b/src/assets/_modal.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  overflow-x: scroll;
+  overflow-x: auto;
 
   .modal-content {
     position: relative;
@@ -16,7 +16,7 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: top 0.4s, opacity 0.4s;
-    overflow: scroll;
+    overflow: auto;
     z-index: auto;
     box-sizing: border-box;
     max-width: 100%;
@@ -51,7 +51,7 @@
 
     .modal-body {
       padding: 16px 0px;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
 
     .modal-footer {
